Ajoute la liste des catégories

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             </div>
             <div class="common_input">
               <label class="form-label">Category</label>
-              <select class="form-select nice_Select2 nice_Select_line">
+              <select class="form-select nice_Select2 nice_Select_line" id="category">
                 <option>Choose a category</option>
               </select>
             </div>
